--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ html {
   background-color: rgb(var(--light-primary-color));
   color: var(--light-text-color);
   font-family: "Lato", sans-serif;
-  font-size: 14.5px;
+  font-size: 17.5px;
   min-height: 100%;
   position: relative;
 }
@@ -62,7 +62,6 @@ main#content > .container {
 .post.container {
   box-sizing: border-box;
   display: inline-block;
-  padding-left: 20px;
 }
 
 .post-toc {
@@ -118,10 +117,8 @@ main#content > .container {
 }
 
 img {
-  width: auto;
   height: auto;
   max-width: 100%;
-  max-height: 100%;
 }
 
 /* HEADER */
@@ -430,7 +427,11 @@ table td {
   font-size: 1.1em;
   font-style: italic;
 }
-.post .post-date {
+.post {
+  /* Prevent long strings from overflowing */
+  overflow-wrap: break-word;
+}
+.post .post-date, .prev-post-date, .next-post-date {
   color: gray;
 }
 .post .post-content {
@@ -480,7 +481,11 @@ table td {
   display: inline-block;
 }
 .post-title .post-link {
-  width: 80%;
+  /* This magic number is the largest width that keeps the post-date div from
+   *  causing the line to wrap with the longest possible date string
+   *  "September 22, 2022"
+   */
+  width: 73%;
 }
 .tags-list .post-tags {
   margin-top: 50px;
@@ -589,4 +594,18 @@ table td {
   width: 1px;
   height: 1px;
   overflow: hidden;
+}
+
+.prev-post {
+  float: left;
+  text-align: left;
+}
+
+.next-post {
+  float: right;
+  text-align: right;
+}
+
+.prev-post, .next-post {
+  max-width: 33%;
 }
